3rd try alignment fix

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 	background-color: #F0F8FF;
 }
 
-img.center {
+img {
 	display: block;
 	margin: 0 auto;
 }
